tests/errors/variables-struct-pattern-non-struct.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let Point { x } = 1;
  return x;
}
